# django-task-manager

./: .gitignore  README.md  auth-implementation-guide.md  git-workflow-guide.md  pyproject.toml
taskmanager/: settings.py
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options_and_more.py  0003_create_bucket_model.py  0003_include_bucket_schema.py
tasks/templates/tasks/: base.html  delete_task.html  home.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_list_kanban.html
tasks/templatetags/: form_filters.py  task_extras.py
